--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon app.js",
-    "start:prod": "SET NODE_ENV=production&nodemon app.js",
+    "start:dev": "node app.js",
+    "start:prod": "SET NODE_ENV=production&node app.js",
     "debug": "ndb app.js"
   },
   "keywords": [],
